dynamically port added but testing unsuccesful

--- a/ems/server/.env
+++ b/ems/server/.env
@@ -2,3 +2,6 @@
 
 DB_USERNAME=pyqplatform
 DB_PASSWORD=4lvW8IbQPvKRETfB
+PORT= 3001
+# mongo_URL = `mongodb+srv://pyqplatform:4lvW8IbQPvKRETfB@cluster0.3tzpejq.mongodb.net/curd_ems?retryWrites=true&w=majority&appName=Cluster0`;
+mongo_URL=mongodb+srv://pyqplatform:4lvW8IbQPvKRETfB@cluster0.3tzpejq.mongodb.net/curd_ems?retryWrites=true&w=majority&appName=Cluster0
