--- a/ems/package.json
+++ b/ems/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.6.7",
     "axois": "^0.0.1-security",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.5",
     "firebase": "^10.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
